# OpenChatbox

./: .gitignore  LICENSE  Makefile  OpenChatbox.spec  OpenChatbox.xcf  README.md  app.py  config.py  main.py  openchatbox.desktop  openchatbox_installer.iss  pyproject.toml  resources.qrc
.github/workflows/: build.yml  test.yml
packaging/aur/openchatbox/: PKGBUILD
services/: gpu_info.py  heartrate_service.py  osc.py  platform_info.py  text_processor.py  update_check.py  vrchat_service.py
services/tokens/: __init__.py  _media_linux.py  _media_win.py  artist_token.py  battery_token.py  blankline_token.py  countdown_token.py  cpu_speed_token.py  cpu_temp_token.py  cpu_token.py  date_token.py  de_token.py  disk_token.py  distro_token.py  egg_token.py  gpu_speed_token.py  gpu_temp_token.py  gpu_token.py  heartrate_emote_token.py  heartrate_token.py  network_token.py  now_playing_token.py  ping_token.py  ram_gb_token.py  ram_token.py  random_token.py  session_token.py  song_progress_bar_token.py  song_progress_token.py  song_token.py  time_token.py  timezone_token.py  twitch_followers_token.py  twitch_viewers_token.py  uptime_token.py  utc_token.py  volume_token.py  vrc_friends_in_instance_token.py  vrc_friends_online_token.py  vrc_friends_total_token.py  (+14 more)
tests/: conftest.py  test_config.py  test_main_window.py  test_osc.py  test_text_processor.py  test_update_check.py  test_vrchat_service.py
tests/tokens/: test_window_token.py
ui/: char_picker.py  char_width.py  main_window.py  vrc_charset.py  vrchat_dialog.py
